[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported

[metadata]
# name = pyftpsync # GitHub dependants needs it in setup.py?
version = attr: ftpsync.__version__
author = Martin Wendt
author_email = pyftpsync@wwwendt.de
maintainer = Martin Wendt
maintainer_email = pyftpsync@wwwendt.de
url = https://github.com/mar10/pyftpsync
project_urls =
    Bug Tracker = https://github.com/mar10/pyftpsync/issues
    Source Code = https://github.com/mar10/pyftpsync
    Documentation = https://pyftpsync.readthedocs.io
    Download = https://github.com/mar10/pyftpsync/releases/latest
    # Discussions = https://github.com/mar10/pyftpsync/discussions
description = Synchronize directories using FTP(S), SFTP, or file system access
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, ftp, ftps, sftp, synchronize, tls, tool
license = MIT
license_files = LICENSE.txt
classifiers =
    # Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    # Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
zip_safe = False

# scripts =
#   bin/first.py
#   bin/second.py

install_requires =
    colorama
    keyring
    pysftp
    PyYAML

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = .
include_package_data = True
exclude =
    tests

[options.data_files]
. = CHANGELOG.md

[options.entry_points]
console_scripts =
    pyftpsync = ftpsync.pyftpsync:run

# --- Coverage Settings --------------------------------------------------------

[coverage:run]
branch = True
omit =
    tests/*

[coverage:report]
precision = 2
; show_missing = True
sort = Name
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:

[coverage:html]
directory = build/coverage

# --- Alternative to pytest.ini ------------------------------------------------

[tool:pytest]
# Silence `PytestDeprecationWarning`
junit_family = legacy
; testpaths =
;     tests
;     src

